--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 
         <div class="projet-box" id="projets">
 
-            <p class="title-box">Projets</p>
+            <p class="title-box">PROJETS</p>
 
             <img src="./src/img/one.png" alt="" class="one">
             <img src="./src/img/two.png" alt="" class="two">
             <img src="./src/img/three.png" alt="" class="three">
             <div class="one-text">
-                <h1 class="one-h1">Développement web</h1>
+                <h1 class="one-h1"><a href="/z-dev-web.html" class="dev-a">Développement web</a></h1>
             </div>
 
             <div class="two-text">
